ci: Setup sonar-project.properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,5 @@
-sonar.projectKey=go-project
+sonar.projectKey=m4sterin_fc2-sonarcloud
+sonar.organization=m4sterin
 
 sonar.sources=.
 sonar.exclusions=**/*_test.go
